--- a/package.json
+++ b/package.json
@@ -7,13 +7,18 @@
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
-    "e2e": "ng e2e"
+    "e2e": "ng e2e",
+    "deploy:gh": "ng build --prod --base-href='https://TurinTur.github.io/Angular/hello-world/' && ngh",
+    "deploy:fb": "ng build --prod && firebase deploy",
+    "postinstall": "ng build --prod"
   },
   "private": true,
   "dependencies": {
     "@angular/animations": "^6.0.2",
+    "@angular/cli": "~6.0.3",
     "@angular/common": "^6.0.2",
     "@angular/compiler": "^6.0.2",
+    "@angular/compiler-cli": "^6.0.2",
     "@angular/core": "^6.0.2",
     "@angular/forms": "^6.0.2",
     "@angular/http": "^6.0.2",
@@ -23,18 +28,17 @@
     "@auth0/angular-jwt": "^2.0.0",
     "bootstrap": "^4.1.1",
     "core-js": "^2.5.4",
+    "express": "^4.16.3",
     "jquery": "^3.3.1",
     "popper": "^1.0.1",
     "popper.js": "^1.14.3",
     "rxjs": "^6.2.0",
     "rxjs-compat": "^6.1.0",
+    "typescript": "~2.7.2",
     "zone.js": "^0.8.26"
   },
   "devDependencies": {
-    "@angular/compiler-cli": "^6.0.2",
     "@angular-devkit/build-angular": "~0.6.3",
-    "typescript": "~2.7.2",
-    "@angular/cli": "~6.0.3",
     "@angular/language-service": "^6.0.2",
     "@types/jasmine": "~2.8.6",
     "@types/jasminewd2": "~2.0.3",
